deploy/resources/generation/resources/generation/resources/generation/resources/generation/sas-bases/overlays/network/istio/components/sas-deployment-data/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-deployment-data
spec:
  host: sas-deployment-data
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /deploymentData/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-licenses
spec:
  host: sas-licenses
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /licenses/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-metering
spec:
  host: sas-metering
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /metering/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-deployment-data
    sas.com/admin: namespace
  name: sas-deployment-data
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /deploymentData
    - uri:
        prefix: /deploymentData/
    route:
    - destination:
        host: sas-deployment-data
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-licenses
    sas.com/admin: namespace
  name: sas-licenses
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /licenses
    - uri:
        prefix: /licenses/
    route:
    - destination:
        host: sas-licenses
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-metering
    sas.com/admin: namespace
  name: sas-metering
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /metering
    - uri:
        prefix: /metering/
    route:
    - destination:
        host: sas-metering
    timeout: 300s
